local_cfg for call added

--- a/ramdisk/init.config_init.rc
+++ b/ramdisk/init.config_init.rc
@@ -1,6 +1,3 @@
 on fs
     mkdir /local_cfg
-    start config_init
-
-service config_init /system/bin/sh /config.sh
-    disabled
+    symlink  /system/etc/catalog/DSDS_A500cg /local_cfg
