--- a/ramdisk/init.rc
+++ b/ramdisk/init.rc
@@ -17,7 +17,7 @@ import /init.aosp.rc
 
 service media /system/bin/mediaserver
     class main
-    user mediaw
+    user media
     group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc mediadrm radio system
     ioprio rt 4
 
