build OMX from source, fix hwcomposer for fast video loading

--- a/ramdisk/init.config_init.rc
+++ b/ramdisk/init.config_init.rc
@@ -1,3 +1,4 @@
 on fs
-    mkdir /local_cfg
-    symlink  /system/etc/catalog/DSDS_A500cg /local_cfg
+    setprop persist.ims_support 0
+    setprop persist.radio.multisim.config dsds
+    setprop ro.swconf.info DSDS_A500CG
