--- a/ramdisk/ueventd.rc
+++ b/ramdisk/ueventd.rc
@@ -31,8 +31,6 @@ subsystem adf
 /dev/diag_arm9            0660   radio      radio
 /dev/android_adb          0660   adb        adb
 /dev/android_adb_enable   0660   adb        adb
-/dev/android_pclink        0660   adb        adb
-/dev/android_pclink_enable 0660   adb        adb
 /dev/ttyMSM0              0600   bluetooth  bluetooth
 /dev/uhid                 0660   system     net_bt_stack
 /dev/uinput               0660   system     net_bt_stack
@@ -93,5 +91,44 @@ subsystem adf
 /sys/devices/virtual/input/input*   enable      0660  root   input
 /sys/devices/virtual/input/input*   poll_delay  0660  root   input
 /sys/devices/virtual/usb_composite/*   enable      0664  root   system
-/sys/devices/system/cpu/cpu*   cpufreq/scaling_max_freq   0664  system system
 /sys/devices/system/cpu/cpu*   cpufreq/scaling_min_freq   0664  system system
+
+#cm props
+/sys/devices/platform/trusty.*      trusty_version        0440  root   log
+/sys/devices/system/cpu/cpu*   cpufreq/scaling_governor   0664  system system
+/sys/devices/system/cpu/cpufreq ondemand/boostfreq   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/boostpulse  0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/boosttime   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/down_differential   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/down_differential_multi_core   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/ignore_nice_load   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/input_boost   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/io_is_busy      0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/optimal_freq   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/powersave_bias  0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/sampling_down_factor    0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/sampling_rate   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/sampling_rate_min   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/sync_freq   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/up_threshold   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/up_threshold_any_cpu_load   0664    system  system
+/sys/devices/system/cpu/cpufreq ondemand/up_threshold_multi_core   0664    system  system
+
+/sys/devices/system/cpu/cpufreq interactive/above_hispeed_delay 0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/align_windows 0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/boost  0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/boostpulse  0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/boostpulse_duration  0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/go_hispeed_load 0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/hispeed_freq    0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/io_is_busy      0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/max_freq_hysteresis 0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/min_sample_rate 0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/min_sample_time 0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/sampling_down_factor 0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/sync_freq 0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/target_loads 0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/timer_rate  0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/timer_slack      0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/up_threshold_any_cpu_freq      0664    system  system
+/sys/devices/system/cpu/cpufreq interactive/up_threshold_any_cpu_load      0664    system  system
